# SHIFT_CFT

./: .gitignore  README.md
app/: .env.example  Dockerfile  main.py  pyproject.toml  settings.py  start.sh
app/api/: schemas.py
app/api/actions/: salary_actions.py  user_actions.py
app/api/handlers/: salary_handlers.py  user_handlers.py
app/db/: models.py  session.py
app/migrations/: env.py
app/migrations/versions/: 006dcc66f4b2_add_lazy.py  08726c2c37da_fix.py  30d7708f66d8_fix.py  772d63897d4e_initial.py  846b47f7bb4f_add_lazy.py  a41d1f714925_add_created_date_in_salary.py  b18ac2cc399a_add_lazy.py  f02e74700280_add_lazy.py
app/tests/: conftest.py
app/tests/test_handlers/: test_salary_handlers.py  test_user_handlers.py
app/utils/: create_admin.py  decorators.py  hashing.py  security.py
